# COACH

./: .gitignore  README.md  pyproject.toml  testing.py
Frontend/startup-ai-coach/: package-lock.json  package.json  tsconfig.json
Frontend/startup-ai-coach/src/: layout.tsx
Frontend/startup-ai-coach/src/components/: analytics.tsx  header.tsx  sidebar.tsx  voice-chat.tsx
Frontend/startup-ai-coach/src/pages/: page.tsx
backend/: agents.py  config.py  database.py  features.py  main.py  models.py  schemas.py  test_azure.py
backend/repository/: seo_langgraph.py  social_clients.py  unsplash_client.py  user.py
backend/routes/: auth_token.py  authentication.py  oauth2.py  social_post.py  users.py  voice.py
backend/static/: index.html  script.js  styles.css
backend/templates/: index.html
