[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Hassan Mehmood <ihassan463m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.17"
langchain-community = "^0.3.16"
langchain-core = "^0.3.33"
langchain-google-genai = "^2.0.9"
tavily-python = "^0.5.0"
langgraph = "^0.2.69"
langgraph-checkpoint-sqlite = "^2.0.5"
langgraph-checkpoint-postgres = "^2.0.15"
psycopg2 = "^2.9.10"
psycopg-pool = "^3.2.4"
langgraph-sdk = "^0.1.51"
langgraph-cli = "^0.1.71"
databases = "^0.9.0"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqlalchemy = "^2.0.38"
azure-cognitiveservices-speech = "^1.42.0"
textblob = "^0.19.0"
yfinance = "^0.2.54"
pandas = "^2.2.3"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
